--- a/src/Embajada/OrhBundle/Resources/views/Vacaciones/show.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Vacaciones/show.html.twig
@@ -14,7 +14,7 @@
                     <div class="control-group">
                         <label for="textfield" class="control-label">Nombre y Apellido</label>
                         <div class="controls">
-                            <p style="padding-top: 5px;">{{ entity.personal.nombres }} {{ entity.personal.apellidos }}</p>
+                            <p style="padding-top: 5px;">{{ entity.ucreado }}</p>
                         </div>
                     </div>
                     <div class="control-group">
