--- a/src/Embajada/ValijaBundle/Resources/views/Hremision/new.html.twig
+++ b/src/Embajada/ValijaBundle/Resources/views/Hremision/new.html.twig
@@ -73,7 +73,7 @@ textarea{
 							{{ form_widget(form._token) }}				
 				
 				    <p>
-				        <button type="submit">Crear</button>
+				        <button type="submit">Guardar</button>
 				    </p>
 
 				</form>
