--- a/src/Embajada/OrhBundle/Resources/views/Vacaciones/index.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Vacaciones/index.html.twig
@@ -1,16 +1,37 @@
 {% extends "::base8.html.twig" %}
 
 {#% block title %}Listado de Notas {% endblock %#}
-
 {% block body %}
-                <div class="row-fluid">
-                    <ul class="minitiles">
-                        <li class="active">
-                            <a href="{{ path('vacaciones_new') }}">
-                                Create a new entry
-                            </a>
-                        </li>
-                    </ul>
+<style>
+a{
+    color: red;
+    font-size: 16px;
+}
+.boton{
+    background-color:#368EE0;
+    color: white;
+    font-weight: bold;
+    margin-top: 5em;
+    padding: 0.5em;
+    text-decoration: none; 
+}
+ul{
+    margin-top: 2em;
+}
+li{
+    list-style-type: none;
+}
+.icon-ok-sign{
+    color: green;
+    font-size: 1.4em;
+}
+table tr td .aprobado{
+    text-align: center;
+}
+</style>
+
+<div class="row-fluid">
+
                     <div class="span12">
                         <div class="box box-color box-bordered green">
                             <div class="box-title">
@@ -24,9 +45,9 @@
                                     <thead>
                                         <tr>
                                             <th>ID</th>
-                                            <th>Nombre y Apellido</th>
+                                            <th>Nombre y Apellidos</th>
                                             <th>Fechadesolitud</th>
-                                            <th class='hidden-350'>Cantidad</th>
+                                            <th class='hidden-350'>Días</th>
                                             <th class='hidden-1024'>Comienza</th>
                                             <th class='hidden-480'>Termina</th>
                                             <th>Actions</th>
@@ -35,22 +56,15 @@
                                     <tbody>
                                         {% for entity in entities %}
                                         <tr>
-                                            <td><a href="{{ path('vacaciones_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                                            <td>{{ entity.personal.nombres }} {{ entity.personal.apellidos }}</td>
-                                            <td>{% if entity.fechadesolitud %}{{ entity.fechadesolitud|date('d-m-Y') }}{% endif %}
+                                            <td><a href="{{ path('vacaciones_pdf', { 'id': entity.id }) }}"><i class="icon-file"></i></td></td></a>
+                                            <td>{{ entity.name}}-{{ entity.apellidos}}</td>
+                                            <td>{% if entity.fechadesolitud %}{{ entity.fechadesolitud|date('Y-m-d') }}{% endif %}
                                             </td>
                                             <td class='hidden-350'>{{ entity.cantidad }}</td>
                                             <td class='hidden-1024'>{% if entity.fechadeinicio %}{{ entity.fechadeinicio|date('d-m-Y') }}{% endif %}</td>
                                             <td class='hidden-480'>{% if entity.fechadefin %}{{ entity.fechadefin|date('d-m-Y') }}{% endif %}</td>
                                             <td class='hidden-480'>
-                                                <ul>
-                                                    <li>
-                                                        <a href="{{ path('vacaciones_show', { 'id': entity.id }) }}">show</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="{{ path('vacaciones_edit', { 'id': entity.id }) }}">edit</a>
-                                                    </li>
-                                                </ul>
+                                                        <a href="{{ path('vacaciones_edit', { 'id': entity.id }) }}">editar</a>
                                             </td>
                                         </tr>
                                         {% endfor %}
@@ -60,4 +74,11 @@
                         </div>
                     </div>
                 </div>
+    <ul>
+         <li >
+            <a class="boton" href="{{ path('vacaciones_new') }}">
+                Solicitar Vacaciones
+                </a>
+        </li>
+    </ul>
 {% endblock %}
