--- a/src/Embajada/ValijaBundle/Resources/views/Hremision/edit.html.twig
+++ b/src/Embajada/ValijaBundle/Resources/views/Hremision/edit.html.twig
@@ -1,22 +1,94 @@
-<h1>Hremision edit</h1>
-
+{% extends "::base8.html.twig" %}
+{% block body %}
+{% if entity.estado==0 %} 
+<style type='text/css'>
+textarea{
+    height: 10em;
+    width: 100%;
+}
+</style>
 <form action="{{ path('hremision_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
-    {{ form_widget(edit_form) }}
-    <p>
-        <button type="submit">Edit</button>
-    </p>
-</form>
+<div class="row-fluid">
+    <div class="span12">
+        <div class="box">
+            <div class="box-title">
+                <h3><i class="icon-list"></i> Guardar</h3>
+            </div>
+            <div class="box-content">
+                <div class="span6">
+                        {{ form_errors (edit_form.numero) }} 
+                        {{ form_label (edit_form.numero) }}  
+                        {{ form_widget (edit_form.numero, { 'attr': {'class':"input-small",}}
+                        )}}
+                        {{ form_errors (edit_form.destino) }} 
+                        {{ form_label (edit_form.destino) }}  
+                        {{ form_widget (edit_form.destino, { 'attr': {'class':"input-medium",}}
+                        )}}
+                </div>
+                <div class="span6">
 
-<ul class="record_actions">
-    <li>
-        <a href="{{ path('hremision') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <form action="{{ path('hremision_delete', { 'id': entity.id }) }}" method="post">
-            {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
-        </form>
-    </li>
-</ul>
+                        {{ form_errors (edit_form.fecha) }} 
+                        {{ form_label (edit_form.fecha) }}  
+                        {{ form_widget (edit_form.fecha, { 'attr': {'class':"input-medium datepick",}}
+                        )}}
+
+                        {{ form_errors (edit_form.ferencia) }} 
+                        {{ form_label (edit_form.ferencia,'Referencia') }}  
+                        {{ form_widget (edit_form.ferencia, { 'attr': {'class':"input-medium",}}
+                        )}}
+                </div>
+                <div class="span12">
+                        {{ form_errors (edit_form.asunto) }} 
+                        {{ form_label (edit_form.asunto) }}  
+                        {{ form_widget (edit_form.asunto, 
+                            { 'attr': 
+                                {
+                                'class':"input-xxlarge",
+
+                                }}
+                        )}}
+                </div>
+                <div class="span12">
+                    <div class="span4">
+                            {{ form_errors (edit_form.descripcion) }} 
+                            {{ form_label (edit_form.descripcion) }}  
+                            {{ form_widget (edit_form.descripcion)}}
+                    </div>
+                    <div class="span4">
+                            {{ form_errors (edit_form.sumilla) }} 
+                            {{ form_label (edit_form.sumilla,'Contenido') }}  
+                            {{ form_widget (edit_form.sumilla)}}
+                    </div>
+                    <div class="span4">
+                            {{ form_errors (edit_form.origen) }} 
+                            {{ form_label (edit_form.origen) }}  
+                            {{ form_widget (edit_form.origen )}}
+                    </div>
+                </div>
+                <div class="span12">
+                            {{ form_errors (edit_form.observaciones) }} 
+                            {{ form_label (edit_form.observaciones) }}  
+                            {{ form_widget (edit_form.observaciones)}}
+                
+                            {{ form_widget(edit_form._token) }}              
+                
+                    <p>
+                        <button type="submit">Guardar</button>
+                    </p>
+                </form>
+                    <ul class="record_actions">
+                        <li>
+                            <a href="{{ path('hremision') }}">
+                                Back to the list
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>  
+{%else%}
+<p>Esta Hoja no se puede editar</p>
+{%endif%}
+{% endblock body %}
