--- a/src/Embajada/ValijaBundle/Resources/views/Hremision/impresion.pdf.twig
+++ b/src/Embajada/ValijaBundle/Resources/views/Hremision/impresion.pdf.twig
@@ -2,12 +2,12 @@
 <head>  
  <style>
  	body{
+
     font-size: 14px;
     padding-left: 10px;
   	}
   	.contenedor {
-  		position: absolute;
-  		bottom: -10px;
+  	
   	}
   	section{
   		display: block;
@@ -21,7 +21,7 @@
   	}
 	p{
         font-family: Arial;
-        font-size: 12;
+        font-size: 13;
         text-align: left;
     }
 	td{
@@ -41,10 +41,6 @@
     .nuevo{
     	border:1px solid black;
     }
-    div .gestor{
-    	position: fixed;
-  		bottom: -10px;
-    }
   </style>  
 </head>  
 <body>
@@ -53,7 +49,7 @@
 	 <figure>
 	 <br>
 	<p align="center"><strong>HOJA DE REMISIÓN Nº 5-18-A/{{ entity.numero}}-20{{ entity.fecha|date('y')}}</strong></p>
-	<p></p>
+	
 	<table>
 		<tr> 
 			<td height="25px" width="100px">PARA</td>
@@ -91,77 +87,28 @@
 	<table border="1px">
 		<tr> 
 			<td class="centrado" width="100px">DESCRIPCIÓN</td>
-			<td class="centrado" width="250px">SUMILLA</td>
+			<td class="centrado" width="240px">SUMILLA</td>
 			<td class="centrado" width="80px">ORIGEN</td>
 			<td class="centrado" width="80px">DESTINO</td>			
 		</tr>
 		<tr> 
 			<td height="100px">
-				{{ entity.descripcion|nl2br}}
+				{{ entity.descripcion }}
 			</td>
-			<td class="medio">{{ entity.sumilla|nl2br}}</td>
-			<td class="centrado">L-TOKIO</td>
-			<td class="centrado">{{ entity.destino}}</td>
+			<td class="medio">{{ entity.sumilla}}</td>
+			<td {#{pdf_line_height="10px"}#}>L-TOKIO</td>
+			<td class="medio">{{ entity.destino}}</td>
 		</tr>
 	</table>
 	<p></p>
-	{% if (entity.observaciones|length<1)  %}<p></p>
-	<p></p>
-	<p></p>
-	<p></p>
-	<p></p>
-	<p></p>
-	<p></p>
-	<table>
-		<tr >
-			<td class="centrado">Elard Escala</td>
-		</tr>
-		<tr>
-			<td class="centrado">Embajador del Perú en Japón</td>
-		</tr>
-	</table>
-	<p></p>
-	<p></p>
-	<p></p>
-	<p></p>
-	<div class="gestor"><font size="10">
-{{ entity.ucreado}}</font></div>
-	{% elseif entity.sumilla|length + entity.observaciones|length > 500 %}
-	<p><strong>OBSERVACIONES:</strong></p>
-	<p>{{ entity.observaciones }}</p>
-	<p></p>
-	<table>
-		<tr >
-			<td class="centrado">Elard Escala</td>
-		</tr>
-		<tr>
-			<td class="centrado">Embajador del Perú en Japón</td>
-		</tr>
-	</table>
-	<p></p>
-	<div class="gestor"><font size="10">
-{{ entity.ucreado}}</font></div>	
+	{% if entity.observaciones=='' %}<p></p>
 	{% else %}
-
 	<p><strong>OBSERVACIONES:</strong></p>
 	<p>{{ entity.observaciones }}</p>
-	<p></p>
-	<p></p>
-	<p></p>
-	<table>
-		<tr >
-			<td class="centrado">Elard Escala</td>
-		</tr>
-		<tr>
-			<td class="centrado">Embajador del Perú en Japón</td>
-		</tr>
-	</table>
-	<p></p>
-	<p></p>
-	<p></p>
-	<div class="gestor"><font size="10">
-{{ entity.ucreado}}</font></div>	
 	{% endif %}
-
+	<section>
+			<p class="nuevo">de</p>
+			<p class="nuevo">de</p>
+	</section>
 </body>
 </html>
