--- a/app/Resources/views/base8.html.twig
+++ b/app/Resources/views/base8.html.twig
@@ -107,7 +107,7 @@
                             <a href="{{ path('vacaciones') }}">Vacaciones</a>
                         </li>
                         <li>
-                            <a href="">Compensatorios</a>
+                            <a href="{{path('vacaciones_vista')}}">Vista General</a>
                         </li>
                     </ul>
                 </li>
