--- a/src/Embajada/OrhBundle/Resources/views/Vacaciones/pdf.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Vacaciones/pdf.html.twig
@@ -116,9 +116,9 @@
         </tr>
         <tr>
             <td colspan="3">
-                <p>Aprobado el………. Le restan …… días de vacaciones del 2013</p>
+                <p>Le restan {{cantidadactual }} días de vacaciones del 2013</p>
             </td>       
-        </tr>        
+        </tr>  
     </table>
 </body>
 </html>
