--- a/src/Embajada/OrhBundle/Resources/views/Vacaciones/vista.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Vacaciones/vista.html.twig
@@ -4,11 +4,11 @@
     <div class="span12">
         <div class="box">
             <div class="box-title">
-                                <h3>
-                                    <i class="icon-table"></i>
-                                    Tabla de Vacaciones
-                                </h3>
-                            </div>
+                <h3>
+                    <i class="icon-table"></i>
+                    Tabla de Vacaciones
+                </h3>
+            </div>
                             <div class="box-content nopadding">
                                 <table class="table table-hover table-nomargin table-condensed">
                                     <thead>
@@ -43,7 +43,7 @@
         </tr>
         {% for entity in entities %}
         <tr>
-            <td>{{ entity.nombres }}~{{ entity.apellidos }}</td>
+            <td>{{ entity.name }}~{{ entity.apellidos }}</td>
             {% for i in -10..40 %}
             {% if  date('now'| date('Y/m/d')|sumar_fechas(i)) == date(entity.fechadeinicio) %}  
                 {% for x in 0..100 if entity['numDias']+1 > x  %}
