--- a/app/Resources/views/base8.html.twig
+++ b/app/Resources/views/base8.html.twig
@@ -31,7 +31,7 @@
     <!-- Datepicker -->
 	<link rel="stylesheet" href="{{ asset('bundles/notas/css/plugins/datepicker/datepicker.css')}}">
     <!-- jQuery -->
-    <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="{{ asset('bundles/notas/js/jquery.min.js')}}"></script>
     <script src="{{ asset('bundles/notas/js/plugins/datepicker/bootstrap-datepicker.js')}}"></script>
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{asset('/Siame/web/img/favicone.ico')}}" />
@@ -94,7 +94,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class='active'>
+                <li >
                     <a href="#" data-toggle="dropdown" class='dropdown-toggle'>
                         <i class="icon-table"></i>
                         <span>RRHH</span>
@@ -219,11 +219,11 @@
     <script src="{{ asset('bundles/notas/js/plugins/fullcalendar/fullcalendar.min.js')}}"></script>
 
     <!-- Theme framework -->
-    <script src="{{ asset('bundles/notas/js/eakroko.min.js')}}"></script>
+    <script src="{#{ asset('bundles/notas/js/eakroko.js')}#}"></script>
     <!-- Theme scripts -->
     <script src="{{ asset('bundles/notas/js/application.min.js')}}"></script>
     <!-- Just for demonstration -->
-    <script src="{{ asset('bundles/notas/js/demonstration.min.js')}}"></script>
+    <script src="{#{ asset('bundles/notas/js/demonstration.min.js')}#}"></script>
 {% endblock %}
 </body>
 </html>
