--- a/src/Embajada/DocumentosBundle/Resources/views/Memoi/new.html.twig
+++ b/src/Embajada/DocumentosBundle/Resources/views/Memoi/new.html.twig
@@ -1,54 +1,33 @@
 {% extends "::base8.html.twig" %}
 {% block body %}
-<!-- CKEditor -->
 	<script src="{{ asset('bundles/notas/js/plugins/ckeditor/ckeditor.js') }}"></script>
-<style type='text/css'>
-a{
-    color: red;
-    font-size: 16px;
-}
-.boton{
-    background-color:#368EE0;
-    color: white;
-    font-weight: bold;
-    margin-top: 5em;
-    padding: 0.5em;
-    text-decoration: none; 
-}
-ul{
-    margin-top: 2em;
-}
-li{
-    list-style-type: none;
-}
-</style>
 <div class="row-row-fluid">
 	<div class="span12">
 		<div class="box">
 			<div class="box-title">
-				<h3><i class="icon-list"></i>Crear Oficios</h3>
+				<h3><i class="icon-list"></i>Memorandum Interno</h3>
 			</div>
 		</div>
 		<div class="box-content">
-			<form action="{{ path('Oficios_create') }}" method="post" {{ form_enctype(form) }}>
-    		{{ form_errors(form) }}
+			<form action="{{ path('Memoi_create') }}" method="post" {{ form_enctype(form) }}>
+			{{ form_errors(form) }}
     		<div>
 	    		<div class="span2">
-	    			{{ form_errors  (form.numerodeoficio) }}
-	    			{{ form_label  (form.numerodeoficio, 'Numero de Oficio') }}
-	    			{{ form_widget (form.numerodeoficio, { 'attr': {
+	    			{{ form_errors  (form.numerodememo) }}
+	    			{{ form_label  (form.numerodememo, 'Numero de Memo') }}
+	    			{{ form_widget (form.numerodememo, { 'attr': {
 	                    'class':"input-small",}}
 	                        )}}
 	            </div>
 	            <div class="span3">
-	                {{ form_errors  (form.referencia) }}
-	    			{{ form_label  (form.referencia) }}
-	    			{{ form_widget (form.referencia) }}
+	                {{ form_errors  (form.remitente) }}
+	    			{{ form_label  (form.remitente) }}
+	    			{{ form_widget (form.remitente) }}
 	    		</div>
 	            <div class="span3">
-	                {{ form_errors  (form.destino) }}
-	    			{{ form_label  (form.destino) }}
-	    			{{ form_widget (form.destino) }}
+	                {{ form_errors  (form.destinatario) }}
+	    			{{ form_label  (form.destinatario) }}
+	    			{{ form_widget (form.destinatario) }}
 	    		</div>
 	            <div class="span3">
 	                {{ form_errors  (form.clasificacion) }}
@@ -63,20 +42,15 @@ li{
                     'class':"input-block-level",}}
                         )}}
             </div>
-    		<div class="span12">
-    			{{ form_errors  (form.cuerpo) }}
-    			{{ form_label  (form.cuerpo, ' ') }}
-    			{{ form_widget (form.cuerpo )}}
-            </div>
-            {{ form_widget(form._token) }}	
             <div class="span12">
             <br>
         		<button class="btn btn-primary"type="submit"><i class="icon-save"></i> Guardar</button>
-        		<a class="btn btn-inverse" href="{{ path('Oficios') }}"><i class="icon-reply"></i>
+        		<a class="btn btn-inverse" href="{{ path('Memoi') }}"><i class="icon-reply"></i>
 	             Regresar
 	        	</a>
     		</br>
             </div>
+    		{#{ form_widget(form) }#}
 			</form>
 		</div>
 	</div>
@@ -84,7 +58,7 @@ li{
 <script type="text/javascript">
 
 $(function() { 
-	CKEDITOR.replace( 'embajada_valijabundle_oficiostype_cuerpo', {
+	CKEDITOR.replace( 'embajada_documentosbundle_memoitype_cuerpo', {
 	toolbarGroups: [		// Displays document group with its two subgroups.
 	 		{ name: 'clipboard',   groups: [ 'clipboard', 'undo' ] },			// Group's name will be used to create voice label																// Line break - next group will be placed in new line.
 	 		{ name: 'basicstyles', groups: [ 'basicstyles', 'cleanup' ] },
