--- a/src/Embajada/ValijaBundle/Resources/views/Oficios/index.html.twig
+++ b/src/Embajada/ValijaBundle/Resources/views/Oficios/index.html.twig
@@ -29,9 +29,12 @@ table tr td .aprobado{
 </style>
 <div class="row-fluid">
     <div class="span12">
-        <div class="box box-color box-boderred green">
+        <div class="box box-color box-bordered green">
             <div class="box-title">
-                <h3><i class="icon-table"></i>Oficios</h3>
+                <h3>
+                <a class="btn btn-success" href="{{ path('Oficios_new') }}"><i class="icon-plus-sign" style="font-size:16px"></i>
+                    Agregar Oficios
+                </a></h3>
             </div>
                 <div class="box-content nopadding">
                     <table class="table table-hover table-nomargin table-striped dataTable dataTable-reorder">
@@ -50,7 +53,7 @@ table tr td .aprobado{
                         <tbody>
                         {% for entity in entities %}
                             <tr>
-                                <td><a href="{{ path('Oficios_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                                <td><a href="{{ path('Oficios_pdf', { 'id': entity.id }) }}"><i class="icon-file"></i></a></td>
                                 <td>{{ entity.numerodeoficio }}</td>
                                 <td>{{ entity.asunto }}</td>
                                 <td>{{ entity.fecha|date('d-m-Y')}}</td>
@@ -72,12 +75,4 @@ table tr td .aprobado{
     </div>
 </div>
 
-
-<ul>
-    <li>
-        <a href="{{ path('Oficios_new') }}">
-            Create a new entry
-        </a>
-    </li>
-</ul>
 {% endblock body %}
