--- a/app/Resources/views/base8.html.twig
+++ b/app/Resources/views/base8.html.twig
@@ -33,6 +33,8 @@
     <!-- jQuery -->
     <script src="{{ asset('bundles/notas/js/jquery.min.js')}}"></script>
     <script src="{{ asset('bundles/notas/js/plugins/datepicker/bootstrap-datepicker.js')}}"></script>
+    <!-- Chosen -->
+    <script src="{{ asset('bundles/notas/js/plugins/chosen/chosen.jquery.min.js')}}"></script>
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{asset('/Siame/web/img/favicone.ico')}}" />
     <!-- Apple devices Homescreen icon -->
@@ -58,15 +60,15 @@
                 <li>
                     <a href="#" data-toggle="dropdown" class='dropdown-toggle'>
                         <i class="icon-edit"></i>
-                        <span>Notas </span>
+                        <span>Documentos</span>
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="">Gaimusho</a>
+                            <a href="">Notas a Gaimusho</a>
                         </li>
                         <li>
-                            <a href="">Cuerpo Diplomatico</a>
+                            <a href="{{ path('Memoi') }}">Memorandum</a>
                         </li>
                     </ul>
                 </li>
@@ -196,8 +198,7 @@
     <script src="{{ asset('bundles/notas/js/plugins/vmap/jquery.vmap.sampledata.js')}}"></script>
     <!-- Bootbox -->
     <script src="{{ asset('bundles/notas/js/plugins/bootbox/jquery.bootbox.js')}}"></script>
-    <!-- Chosen -->
-    <script src="{{ asset('bundles/notas/js/plugins/chosen/chosen.jquery.min.js')}}"></script>
+
     <!-- dataTables -->
     <script src="{{ asset('bundles/notas/js/plugins/datatable/jquery.dataTables.min.js')}}"></script>
     <script src="{{ asset('bundles/notas/js/plugins/datatable/TableTools.min.js')}}"></script>
