--- a/src/Embajada/DocumentosBundle/Resources/views/Memoi/show.html.twig
+++ b/src/Embajada/DocumentosBundle/Resources/views/Memoi/show.html.twig
@@ -19,6 +19,10 @@
             <td>{{ entity.destinatario }}</td>
         </tr>
         <tr>
+            <th>Destinatario</th>
+            <td>{{ entity.dindividuales }}</td>
+        </tr>
+        <tr>
             <th>Fecha</th>
             <td>{{ entity.fecha|date('Y-m-d H:i:s') }}</td>
         </tr>
