--- a/src/Embajada/DocumentosBundle/Resources/views/Memoi/edit.html.twig
+++ b/src/Embajada/DocumentosBundle/Resources/views/Memoi/edit.html.twig
@@ -1,22 +1,114 @@
-<h1>Memoi edit</h1>
-
-<form action="{{ path('Memoi_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
-    {{ form_widget(edit_form) }}
-    <p>
-        <button type="submit">Edit</button>
-    </p>
+{% extends "::base8.html.twig" %}
+{% block body %}
+<!-- CKEditor -->
+    <script src="{{ asset('bundles/notas/js/plugins/ckeditor/ckeditor.js') }}"></script>
+<div class="row-row-fluid">
+    <div class="span12">
+        <div class="box">
+            <div class="box-title">
+                <h3>
+                    <i class="icon-list"></i>Editar
+                </h3>
+            </div>
+        <div>
+        <div class="box-content">
+            <form action="{{ path('Memoi_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+                {#{ form_widget(edit_form) }#}
+        <div>
+                <div class="span1">
+                    {{ form_errors  (edit_form.numerodememo) }}
+                    {{ form_label  (edit_form.numerodememo, 'Numero') }}
+                    {{ form_widget (edit_form.numerodememo, { 'attr': {
+                    'class':"input-block-level",}}
+                            )}}
+                </div>
+                <div class="span2">
+                    {{ form_errors  (edit_form.remitente) }}
+                    {{ form_label  (edit_form.remitente) }}
+                    {{ form_widget (edit_form.remitente , { 'attr': {
+                    'class':"input-block-level",}}
+                            )}}
+                </div>
+                <div class="span2">
+                    {{ form_errors  (edit_form.destinatario) }}
+                    {{ form_label  (edit_form.destinatario) }}
+                    {{ form_widget (edit_form.destinatario, { 'attr': {
+                    'class':"input-medium",}}
+                        )}}
+                </div>
+                <div id="invisible" class="span3">
+                    {{ form_errors  (edit_form.dindividuales) }}
+                    {{ form_label  (edit_form.dindividuales) }}
+                    {{ form_widget (edit_form.dindividuales, { 'attr': {
+                    'placeholder':"Escriba un nombre",
+                                }}
+                            )}}
+                </div>
+                <div class="span2">
+                    {{ form_errors  (edit_form.clasificacion) }}
+                    {{ form_label  (edit_form.clasificacion) }}
+                    {{ form_widget (edit_form.clasificacion, { 'attr': {
+                    'class':"input-medium",}}
+                        )}}
+                </div>
+                <div class="span12">
+                    {{ form_errors  (edit_form.asunto) }}
+                    {{ form_label  (edit_form.asunto, 'Asunto') }}
+                    {{ form_widget (edit_form.asunto, { 'attr': {
+                        'class':"input-block-level",}}
+                            )}}
+                </div>
+                <div class="span12">
+                    {{ form_errors  (edit_form.cuerpo) }}
+                    {{ form_label  (edit_form.cuerpo, ' ') }}
+                    {{ form_widget (edit_form.cuerpo )}}
+            </div>
+                {{ form_widget(edit_form._token) }}
+            <div class="span12">
+                <br>
+                <button class="btn btn-primary" type="submit"><i class="icon-save"></i> Guardar</button>
+                <a class="btn btn-inverse" href="{{ path('Memoi') }}"> <i class="icon-reply"></i> Regresar</a>
+                </br>
+            </div>
+        </div>
+    </div>
+</div>
 </form>
+<script type="text/javascript">
 
-<ul class="record_actions">
-    <li>
-        <a href="{{ path('Memoi') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <form action="{{ path('Memoi_delete', { 'id': entity.id }) }}" method="post">
-            {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
-        </form>
-    </li>
-</ul>
+$(function() { 
+    var x= $( "#embajada_documentosbundle_memoitype_destinatario" ).val();
+    if (x=='OTROS'){
+        //alert( "Handler for .change() called."+i );
+        $('#invisible').fadeIn( "slow" );
+    }
+    else{
+        $('#invisible').css('display' , 'none');
+        $('#embajada_documentosbundle_memoitype_dindividuales').prop('required','');
+
+    }
+    CKEDITOR.replace( 'embajada_documentosbundle_memoitype_cuerpo', {
+    toolbarGroups: [
+        { name: 'clipboard',   groups: [ 'clipboard', 'undo' ] },           
+        { name: 'basicstyles', groups: [ 'basicstyles', 'cleanup' ] },
+        { name: 'paragraph',   groups: [ 'list', 'indent', 'blocks', 'align' ] },
+        { name: 'tools', items: [ 'Maximize' ] },
+        ]
+    });
+
+
+});
+
+$( "#embajada_documentosbundle_memoitype_destinatario" ).change(function() {
+    var i = $(this).val();
+    if (i=='OTROS'){
+        //alert( "Handler for .change() called."+i );
+        $('#invisible').fadeIn( "slow" );
+    }
+    else{
+        $('#invisible').css('display' , 'none');
+    }   
+});
+
+ </script>
+{% endblock body %}
