--- a/src/Embajada/DocumentosBundle/Resources/views/Memoi/edit.html.twig
+++ b/src/Embajada/DocumentosBundle/Resources/views/Memoi/edit.html.twig
@@ -10,7 +10,7 @@
                     <i class="icon-list"></i>Editar
                 </h3>
             </div>
-        <div>
+        </div>
         <div class="box-content">
             <form action="{{ path('Memoi_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
                 {#{ form_widget(edit_form) }#}
