--- a/src/Embajada/OrhBundle/Resources/views/Vacaciones/edit.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Vacaciones/edit.html.twig
@@ -1,25 +1,39 @@
 {% extends "::base8.html.twig" %}
 {% block body %}
-<h1>Editar vacaciones</h1>
-
-<form action="{{ path('vacaciones_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
-    {{ form_widget(edit_form) }}
-    <p>
-        <button type="submit">Edit</button>
-    </p>
-</form>
-
-<ul class="record_actions">
-    <li>
-        <a href="{{ path('vacaciones') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <form action="{{ path('vacaciones_delete', { 'id': entity.id }) }}" method="post">
-            {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
+<div class="row-row-fluid">
+    <div class="span12">
+        <div class="box">
+            <div class="box-title">
+                <h3>
+                    <i class="icon-list"></i>Aprobar Vacaciones
+                </h3>
+            </div>
+        </div>
+        <div class="span12">
+        <h4>El dia {{ entity.fechadesolitud|date('d-m-Y') }} el usuario {{entity.ucreado}} solicito hacer usos de vacaciones del dia {{ entity.fechadeinicio|date('d-m-Y') }} al {{ entity.fechadefin|date('d-m-Y') }}.
+        </h4>
+        </div>
+        <form action="{{ path('vacaciones_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+        <div class="span4">
+            {{ form_errors  (edit_form.aprobado) }}
+            {{ form_label  (edit_form.aprobado, ' ' )}}
+            {{ form_widget (edit_form.aprobado)}}
+        </div>
+        <div class="invisible">
+            {{ form_widget(edit_form) }}
+        </div>
+            <div class="span12">
+                <br>
+                <button class="btn btn-primary" type="submit"><i class="icon-save"></i> Guardar</button>
+                <a class="btn btn-inverse" href="{{ path('vacaciones') }}"> <i class="icon-reply"></i> Regresar</a>
+                </br>
+            </div>
         </form>
-    </li>
-</ul>
+    </div>
+</div>
+<script type="text/javascript">
+$(function(){
+    $('.invisible').css('display','none');
+})
+</script>
 {% endblock body %}
