--- a/src/Embajada/OrhBundle/Resources/views/Vacaciones/vista.html.twig
+++ b/src/Embajada/OrhBundle/Resources/views/Vacaciones/vista.html.twig
@@ -1,65 +1,84 @@
 {% extends "::base8.html.twig" %}
 {% block body %}
+<style type="text/css">
+.fondo{
+    color: white;
+    margin-left: 3em;
+    padding: 0 1em;
+}
+.amarillo{
+    background-color: yellow;
+}
+.verde{
+    background-color: green;
+}
+.rojo{
+    background-color: red;
+}
+</style>
 <div class="row-fluid">
     <div class="span12">
         <div class="box">
             <div class="box-title">
                 <h3>
                     <i class="icon-table"></i>
-                    Tabla de Vacaciones
+                    Tabla de Vacaciones 
+                    <span class="fondo amarillo"></span>SOLICITADAS
+                    <span class="fondo verde"></span>APROBADAS
+                    <span class="fondo rojo"></span>DENEGADAS
                 </h3>
             </div>
-                            <div class="box-content nopadding">
-                                <table class="table table-hover table-nomargin table-condensed">
-                                    <thead>
-                                        <tr>
-                                            <th>Nombres</th>
-
-                                            {% for i in -10..40 %}        
-
-                                                <th>
-                                                    {{ 'now'| date('Y/m/d')|sumar_fechas(i)|fecha ('full','none','es')| mostrar_primer_caracter| upper}}
-                                                </th>   
-                                            {% endfor %} 
-                                        </tr>
-                                    </thead>
-                                    <thead>
-                                        <tr>
-                                            <th>Apellidos</th>
-
-                                            {% for i in -10..40 %}        
-                                                <th>
-                                                    {{ ('now'| date('Y/m/d')|sumar_fechas(i)|date ('d'))}}
-                                                </th>   
-                                            {% endfor %}   
- 
-                                        </tr>
-                                    </thead>
-    <tbody>
-
-        <tr>
-            <td></td>
- 
-        </tr>
-        {% for entity in entities %}
-        <tr>
-            <td>{{ entity.name }}~{{ entity.apellidos }}</td>
-            {% for i in -10..40 %}
-            {% if  date('now'| date('Y/m/d')|sumar_fechas(i)) == date(entity.fechadeinicio) %}  
-                {% for x in 0..100 if entity['numDias']+1 > x  %}
-                    <td bgcolor="#1BE022">V</td>
-                {% endfor %}
-            {% else %}
-                    <td>x</td>
-            {% endif %}
-            {% endfor %} 
-        </tr>
-        {% endfor %}
-        </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>        
+            <div class="box-content nopadding">
+            <table class="table table-nomargin table-condensed">
+                <thead>
+                    <tr>
+                        <th>Nombres</th>
+                        {% for i in -10..40 %}        
+                        <th>
+                            {{ 'now'| date('Y/m/d')|sumar_fechas(i)|fecha ('full','none','es')| mostrar_primer_caracter| upper}}
+                        </th>   
+                        {% endfor %} 
+                    </tr>
+                </thead>
+                <thead>
+                    <tr>
+                        <th>Apellidos</th>
+                        {% for i in -10..40 %}        
+                        <th>
+                        {{ ('now'| date('Y/m/d')|sumar_fechas(i)|date ('d'))}}
+                        </th>   
+                        {% endfor %}   
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                    </tr>
+                    {% for entity in entities %}
+                    <tr>
+                        <td>{{ entity.name }}~{{ entity.apellidos }}</td>
+                        {% for i in -10..40-entity['numDias'] %}
+                            {% if  date('now'| date('Y/m/d')|sumar_fechas(i)) == date(entity.fechadeinicio) %}  
+                                {% for x in 0..100 %}
+                                    {% if entity['numDias']+1 > x and entity['aprobado']==0 %}
+                                    <td bgcolor="yellow">.</td>
+                                    {% elseif entity['numDias']+1 > x and entity['aprobado']==1 %}
+                                    <td bgcolor="green">.</td>
+                                    {% elseif entity['numDias']+1 > x and entity['aprobado']==2 %}
+                                    <td bgcolor="red">.</td>
+                                    {% endif %}
+                                {% endfor %}
+                            {% else %}
+                            <td>x</td>
+                            {% endif %}
+                        {% endfor %}
+                    </tr>
+                    {% endfor %}
+                </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>        
 {% endblock body %}
      
